# syntect-cgit

./: Cargo.toml
src/: main.rs
