[package]
name = "syntect-cgit"
version = "0.1.0"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = { version = "0.20", default-features = false, features = ["build-assets"] }
once_cell = "1.10"
syntect = "4.6.0"
